// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter: <ApplyButton /> should handle clicks 1`] = `
<SurroundPortals
  portalName="filter.apply-button"
  portalProps={
    Object {
      "disabled": false,
      "onClick": [MockFunction],
      "widgetSettings": Object {},
    }
  }
>
  <div
    className={
      Object {
        "data-css-1cqgl9p": "",
      }
    }
  >
    <Button
      className="css-1x58v7w"
      disabled={false}
      flat={true}
      onClick={[MockFunction]}
      testId="applyFilterButton"
      type="primary"
    >
      <Text
        string="filter.apply"
        style={
          Object {
            "color": undefined,
          }
        }
      />
    </Button>
  </div>
</SurroundPortals>
`;

exports[`Filter: <ApplyButton /> should render as activated 1`] = `
<SurroundPortals
  portalName="filter.apply-button"
  portalProps={
    Object {
      "disabled": false,
      "onClick": [Function],
      "widgetSettings": Object {},
    }
  }
>
  <div
    className={
      Object {
        "data-css-1cqgl9p": "",
      }
    }
  >
    <Button
      className="css-1x58v7w"
      disabled={false}
      flat={true}
      onClick={[Function]}
      testId="applyFilterButton"
      type="primary"
    >
      <Text
        string="filter.apply"
        style={
          Object {
            "color": undefined,
          }
        }
      />
    </Button>
  </div>
</SurroundPortals>
`;

exports[`Filter: <ApplyButton /> should render as deactivated 1`] = `
<SurroundPortals
  portalName="filter.apply-button"
  portalProps={
    Object {
      "disabled": true,
      "onClick": [Function],
      "widgetSettings": Object {},
    }
  }
>
  <div
    className={
      Object {
        "data-css-1cqgl9p": "",
      }
    }
  >
    <Button
      className="css-1x58v7w"
      disabled={true}
      flat={true}
      onClick={[Function]}
      testId="applyFilterButton"
      type="primary"
    >
      <Text
        string="filter.apply"
        style={
          Object {
            "color": undefined,
          }
        }
      />
    </Button>
  </div>
</SurroundPortals>
`;
